5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1674_1879.log
== TEST (2019-04-30 11:45:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
he = float(input("insira as horas extras:"))
hnt = float(input("insira s horas nao trabalhadas")

print(he, "extras e ",hnt,"de falta")
H = he - (0.25 * hnt)
				
if(H > 500)
				
-- ERROR:
File "XXXX", line 5
    print(he, "extras e ",hnt,"de falta")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
he = float(input("insira as horas extras:"))
hnt = float(input("insira s horas nao trabalhadas")

print(he "extras e ",hnt,"de falta")
				
H = he - (0.25 * hnt)
				
if(H > 500)
				
-- ERROR:
File "XXXX", line 5
    print(he "extras e ",hnt,"de falta")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:46:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
he = float(input("insira as horas extras:"))
hnt = float(input("insira s horas nao trabalhadas")

print(he ,"extras e ",hnt,"de falta")
				
H = he - (0.25 * hnt)
				
if(H > 500)
				
-- ERROR:
File "XXXX", line 5
    print(he ,"extras e ",hnt,"de falta")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:46:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
he = float(input("insira as horas extras:"))
hnt = float(input("insira s horas nao trabalhadas")

print(" ", he ,"extras e ",hnt,"de falta")
				
H = he - (0.25 * hnt)
				
if(H > 500)
				
-- ERROR:
File "XXXX", line 5
    print(" ", he ,"extras e ",hnt,"de falta")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:47:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
he = float(input("insira as horas extras:"))
hnt = float(input("insira s horas nao trabalhadas")

print(, he ,"extras e ",hnt,"de falta")
				
H = he - (0.25 * hnt)
				
if(H > 500)
				
-- ERROR:
File "XXXX", line 5
    print(, he ,"extras e ",hnt,"de falta")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:47:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
he = float(input("insira as horas extras:"))
hnt = float(input("insira s horas nao trabalhadas")

print( he ,"extras e ",hnt,"de falta")
				
H = he - (0.25 * hnt)
				
if(H > 500)
				
-- ERROR:
File "XXXX", line 5
    print( he ,"extras e ",hnt,"de falta")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:47:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
he = float(input("insira as horas extras:"))
hnt = float(input("insira s horas nao trabalhadas")

print(he,"extras e ",hnt,"de falta")
				
H = he - (0.25 * hnt)
				
if(H > 500)
				
-- ERROR:
File "XXXX", line 5
    print(he,"extras e ",hnt,"de falta")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:48:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
he = float(input("insira as horas extras:"))
hnt = float(input("insira s horas nao trabalhadas")

print(he,"extras e",hnt,"de falta")
				
H = he - (0.25 * hnt)
				
if(H > 500)
				
-- ERROR:
File "XXXX", line 5
    print(he,"extras e",hnt,"de falta")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:48:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
he = float(input("insira as horas extras:"))
hnt = float(input("insira s horas nao trabalhadas")

print(he,"extras e",hnt,"de falta")
				
H = he - (0.25 * hnt)
				
if(H > 500)
				
-- ERROR:
File "XXXX", line 5
    print(he,"extras e",hnt,"de falta")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:49:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("insira as horas extras:"))
y = float(input("insira s horas nao trabalhadas")

print(x,"extras e",y,"de falta")
				
H = he - (0.25 * hnt)
				
if(H > 500)
				
-- ERROR:
File "XXXX", line 5
    print(x,"extras e",y,"de falta")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:49:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("insira as horas extras:"))
y = float(input("insira as horas nao trabalhadas")

print(x,"extras e",y,"de falta")
				
H = he - (0.25 * hnt)
				
if(H > 500)
				
-- ERROR:
File "XXXX", line 5
    print(x,"extras e",y,"de falta")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:50:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("insira as horas extras:"))
y = float(input("insira as horas nao trabalhadas"))

print(x,"extras e",y,"de falta")
				
H = he - (0.25 * hnt)
				
if(H > 500):
				
-- ERROR:
File "XXXX", line 11
    
        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:23:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("insira as horas extras:"))
y = float(input("insira as horas nao trabalhadas"))

print(x,"extras e",y,"de falta")
				
H = he - (0.25 * hnt)
a = 100.00
b = 500.00
if(H <= 400):
	print(a)
else:
	print(b)

			
-- EXECUTION TIME:
0.165717
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1879/main.py", line 7, in <module>
    H = he - (0.25 * hnt)
NameError: name 'he' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:23:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("insira as horas extras:"))
y = float(input("insira as horas nao trabalhadas"))

print(x,"extras e",y,"de falta")
				
H = he - (0.25 * hnt)
a = 100.00
b = 500.00
if(H <= 400):
	print(a)
else:
	print(b)

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    H = he - (0.25 * hnt)
NameError: name 'he' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:23:26) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("insira as horas extras:"))
y = float(input("insira as horas nao trabalhadas"))

print(x,"extras e",y,"de falta")
				
H = he - (0.25 * hnt)
a = 100.00
b = 500.00
if(H <= 400):
	print(a)
else:
	print(b)

			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    H = he - (0.25 * hnt)
NameError: name 'he' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:23:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("insira as horas extras:"))
y = float(input("insira as horas nao trabalhadas"))

print(x,"extras e",y,"de falta")
				
H = x - (0.25 * y)
a = 100.00
b = 500.00
if(H <= 400):
	print(a)
else:
	print(b)

			
-- OUTPUT:
420.0 extras e 20.0 de falta
500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:23:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("insira as horas extras:"))
y = float(input("insira as horas nao trabalhadas"))

print(x,"extras e",y,"de falta")
				
H = x - (0.25 * y)
a = 100.00
b = 500.00
if(H <= 400):
	print(a)
else:
	print(b)

			
-- EXECUTION TIME:
0.21489
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:24:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("insira as horas extras:"))
y = float(input("insira as horas nao trabalhadas"))

print(x,"extras e",y,"de falta")
				
H = x - (0.25 * y)
a = 100.00
b = 500.00
if(H <= 400):
	print(a)
else:
	print(b)

			
-- OUTPUT:
420.0 extras e 20.0 de falta
500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:24:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("insira as horas extras:"))
y = float(input("insira as horas nao trabalhadas"))

print(x,"extras e",y,"de falta")
				
H = x - (0.25 * y)
a = 100.00
b = 500.00
if(H <= 400):
	print(a)
else:
	print(b)

			
-- OUTPUT:
420.0 extras e 20.0 de falta
500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:24:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("insira as horas extras:"))
y = float(input("insira as horas nao trabalhadas"))

print(x,"extras e",y,"de falta")
				
H = x - (0.25 * y)
a = 100.00
b = 500.00
if(H <= 400):
	print(a)
else:
	print(b)

			
-- OUTPUT:
420.0 extras e 20.0 de falta
500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:24:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("insira as horas extras:"))
y = float(input("insira as horas nao trabalhadas"))

print(x,"extras e",y,"de falta")
				
H = x - (0.25 * y)
a = 100.00
b = 500.00
if(H <= 400):
	print("R$",a)
else:
	print("R$",b)

			
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:24:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("insira as horas extras:"))
y = float(input("insira as horas nao trabalhadas"))

print(x,"extras e",y,"de falta")
				
H = x - (0.25 * y)
a = 100.00
b = 500.00
if(H <= 400):
	print("R$",a)
else:
	print("R$",b)

			
-- EXECUTION TIME:
0.169981
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
